crates/preprocessor/tests/snapshots/main__if_directive_defined_complex_8.snap
---
source: crates/preprocessor/tests/main.rs
assertion_line: 182
expression: "SourcepawnPreprocessor::new(FileId::from(0), input,\n                &mut extend_macros).preprocess_input().preprocessed_text().as_ref()"
---
#define FOO 1

int foo;



