crates/preprocessor/tests/snapshots/main__if_directive_expansion_2-2.snap
---
source: crates/preprocessor/tests/main.rs
expression: "PreprocessingResult_ :: from(res)"
---
{
  "vec": [
    [
      0,
      7,
      0,
      7
    ],
    [
      8,
      11,
      8,
      11
    ],
    [
      12,
      13,
      12,
      13
    ],
    [
      31,
      34,
      19,
      22
    ],
    [
      35,
      38,
      23,
      26
    ],
    [
      38,
      39,
      26,
      27
    ],
    [
      46,
      46,
      28,
      28
    ]
  ],
  "expanded_symbols": [
    {
      "range": {
        "start": 18,
        "end": 21
      },
      "expanded_range": {
        "start": 18,
        "end": 21
      },
      "idx": 0,
      "file_id": 0
    }
  ]
}
