crates/preprocessor/tests/snapshots/main__if_directive_expansion_3-2.snap
---
source: crates/preprocessor/tests/main.rs
expression: "PreprocessingResult_ :: from(res)"
---
{
  "vec": [
    [
      0,
      7,
      0,
      7
    ],
    [
      8,
      11,
      8,
      11
    ],
    [
      11,
      12,
      11,
      12
    ],
    [
      12,
      13,
      12,
      13
    ],
    [
      13,
      14,
      13,
      14
    ],
    [
      14,
      15,
      14,
      15
    ],
    [
      15,
      16,
      15,
      16
    ],
    [
      16,
      17,
      16,
      17
    ],
    [
      17,
      18,
      17,
      18
    ],
    [
      19,
      20,
      19,
      20
    ],
    [
      20,
      21,
      20,
      21
    ],
    [
      22,
      23,
      22,
      23
    ],
    [
      24,
      25,
      24,
      25
    ],
    [
      25,
      26,
      25,
      26
    ],
    [
      27,
      34,
      27,
      34
    ],
    [
      35,
      38,
      35,
      38
    ],
    [
      38,
      39,
      38,
      39
    ],
    [
      39,
      40,
      39,
      40
    ],
    [
      40,
      41,
      40,
      41
    ],
    [
      41,
      42,
      41,
      42
    ],
    [
      42,
      43,
      42,
      43
    ],
    [
      43,
      44,
      43,
      44
    ],
    [
      44,
      45,
      44,
      45
    ],
    [
      46,
      47,
      46,
      47
    ],
    [
      47,
      48,
      47,
      48
    ],
    [
      49,
      50,
      49,
      50
    ],
    [
      51,
      52,
      51,
      52
    ],
    [
      52,
      53,
      52,
      53
    ],
    [
      93,
      93,
      56,
      56
    ]
  ],
  "expanded_symbols": [
    {
      "range": {
        "start": 58,
        "end": 79
      },
      "expanded_range": {
        "start": 58,
        "end": 61
      },
      "idx": 0,
      "file_id": 0
    }
  ]
}
