crates/preprocessor/tests/snapshots/main__if_directive_nested_expansion_1-2.snap
---
source: crates/preprocessor/tests/main.rs
assertion_line: 279
expression: "PreprocessingResult_ :: from(res)"
---
{
  "vec": [
    [
      0,
      7,
      0,
      7
    ],
    [
      8,
      11,
      8,
      11
    ],
    [
      12,
      15,
      12,
      15
    ],
    [
      16,
      23,
      16,
      23
    ],
    [
      24,
      27,
      24,
      27
    ],
    [
      28,
      29,
      28,
      29
    ],
    [
      47,
      50,
      35,
      38
    ],
    [
      51,
      54,
      39,
      42
    ],
    [
      54,
      55,
      42,
      43
    ]
  ],
  "expanded_symbols": [
    [
      34,
      37,
      34,
      37,
      0,
      0
    ]
  ]
}
