crates/preprocessor/tests/snapshots/main__if_directive_nested_expansion_2-2.snap
---
source: crates/preprocessor/tests/main.rs
expression: "PreprocessingResult_ :: from(res)"
---
{
  "vec": [
    [
      0,
      7,
      0,
      7
    ],
    [
      8,
      11,
      8,
      11
    ],
    [
      12,
      15,
      12,
      15
    ],
    [
      16,
      17,
      16,
      17
    ],
    [
      18,
      19,
      18,
      19
    ],
    [
      20,
      27,
      20,
      27
    ],
    [
      28,
      31,
      28,
      31
    ],
    [
      32,
      33,
      32,
      33
    ],
    [
      34,
      35,
      34,
      35
    ],
    [
      36,
      39,
      36,
      39
    ],
    [
      40,
      47,
      40,
      47
    ],
    [
      48,
      51,
      48,
      51
    ],
    [
      52,
      53,
      52,
      53
    ],
    [
      54,
      55,
      54,
      55
    ],
    [
      56,
      57,
      56,
      57
    ],
    [
      76,
      79,
      63,
      66
    ],
    [
      80,
      83,
      67,
      70
    ],
    [
      83,
      84,
      70,
      71
    ],
    [
      84,
      85,
      71,
      72
    ]
  ],
  "expanded_symbols": [
    {
      "range": {
        "start": 62,
        "end": 65
      },
      "expanded_range": {
        "start": 62,
        "end": 65
      },
      "idx": 0,
      "file_id": 0
    }
  ]
}
