crates/preprocessor/tests/snapshots/main__if_directive_nested_expansion_infinite_loop_1-2.snap
---
source: crates/preprocessor/tests/main.rs
assertion_line: 302
expression: "PreprocessingResult_ :: from(res)"
---
{
  "vec": [
    [
      0,
      7,
      0,
      7
    ],
    [
      8,
      11,
      8,
      11
    ],
    [
      12,
      15,
      12,
      15
    ],
    [
      16,
      23,
      16,
      23
    ],
    [
      24,
      27,
      24,
      27
    ],
    [
      28,
      31,
      28,
      31
    ]
  ],
  "expanded_symbols": [
    [
      36,
      39,
      36,
      39,
      0,
      0
    ]
  ]
}
